--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
             gap: 15px; /* Відстань між елементами */
         }
         .banner img {
-            width: 300px; /* Збільшено розмір банера */
+            width: 80%; /* Зменшено ширину банера */
+            max-width: 300px; /* Максимальна ширина */
             height: auto;
             cursor: pointer;
         }
@@ -44,6 +45,23 @@
             width: 100%;
             height: 450px; /* Розмір відео */
             border: none;
+        }
+
+        /* Медіа-запит для мобільних пристроїв */
+        @media (max-width: 768px) {
+            .banner-container {
+                top: 10px; /* Зменшення відстані для мобільних */
+            }
+            .banner img {
+                width: 100%; /* Більш адаптована ширина для маленьких екранів */
+                max-width: 200px; /* Зменшення максимального розміру банера */
+            }
+            .video-container {
+                width: 95%; /* Зменшення ширини відео */
+            }
+            iframe {
+                height: 250px; /* Зменшення висоти відео для мобільних */
+            }
         }
     </style>
 </head>
