--- a/index.html
+++ b/index.html
@@ -22,14 +22,13 @@
             transform: translateX(-50%);
             display: flex;
             align-items: center;
-            gap: 15px;
+            gap: 15px; /* Відстань між елементами */
         }
         .banner img {
-            width: 80%;
-            max-width: 300px;
+            width: 80%; /* Зменшено ширину банера */
+            max-width: 300px; /* Максимальна ширина */
             height: auto;
             cursor: pointer;
-            transition: all 0.3s ease-in-out;
         }
         .emoji {
             font-size: 50px;
@@ -44,24 +43,24 @@
         }
         iframe {
             width: 100%;
-            height: 450px;
+            height: 450px; /* Розмір відео */
             border: none;
         }
 
         /* Медіа-запит для мобільних пристроїв */
         @media (max-width: 768px) {
             .banner-container {
-                top: 10px;
+                top: 10px; /* Зменшення відстані для мобільних */
             }
             .banner img {
-                width: 150%; /* Збільшено банер */
-                max-width: 300px; /* Але не більше 300px */
+                width: 100%; /* Більш адаптована ширина для маленьких екранів */
+                max-width: 400px; /* Зменшення максимального розміру банера */
             }
             .video-container {
-                width: 95%;
+                width: 95%; /* Зменшення ширини відео */
             }
             iframe {
-                height: 250px;
+                height: 250px; /* Зменшення висоти відео для мобільних */
             }
         }
     </style>
@@ -75,6 +74,7 @@
         <div class="emoji">👈</div>
     </div>
     <div class="video-container">
+        <!-- Вставка відео через Google Drive iframe -->
         <iframe src="https://drive.google.com/file/d/1Qtdn_TFyQn65BRAXmPKA0wm4BG2O0kO2/preview" allow="autoplay"></iframe>
     </div>
 </body>
