Оновлення стилів для адаптивного дизайну

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
             gap: 15px; /* Відстань між елементами */
         }
         .banner img {
-            width: 100%; /* Зменшено ширину банера */
-            max-width: 400px; /* Максимальна ширина */
-            height: auto;
-            cursor: pointer;
-        }
+    width: auto; /* Автоматична ширина */
+    max-width: 600px; /* Збільшена максимальна ширина */
+    height: auto;
+    cursor: pointer;
+}
         .emoji {
             font-size: 50px;
         }
@@ -54,7 +54,7 @@
             }
             .banner img {
                 width: 100%; /* Більш адаптована ширина для маленьких екранів */
-                max-width: 400px; /* Зменшення максимального розміру банера */
+                max-width: 500px; /* Зменшення максимального розміру банера */
             }
             .video-container {
                 width: 95%; /* Зменшення ширини відео */
