Оновлення стилів для адаптивного дизайну

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             }
             .banner img {
                 width: 100%; /* Більш адаптована ширина для маленьких екранів */
-                max-width: 500px; /* Зменшення максимального розміру банера */
+                max-width: 600px !important; /* Зменшення максимального розміру банера */
             }
             .video-container {
                 width: 95%; /* Зменшення ширини відео */
