Оновлення стилів для адаптивного дизайну

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div class="banner-container">
         <div class="emoji">👉</div>
         <a href="https://1wzyuh.com/casino/list/4?p=a7w0" class="banner">
-            <img src="images/banner.png" alt="Банер">
+            <img src="images/banner2.png.png" alt="Банер">
         </a>
         <div class="emoji">👈</div>
     </div>
