Оновлення стилів для адаптивного дизайну

--- a/index.html
+++ b/index.html
@@ -47,22 +47,25 @@
             border: none;
         }
 
-        /* Медіа-запит для мобільних пристроїв */
-        @media (max-width: 768px) {
-            .banner-container {
-                top: 10px; /* Зменшення відстані для мобільних */
-            }
-            .banner img {
-                width: 100%; /* Більш адаптована ширина для маленьких екранів */
-                max-width: 600px !important; /* Зменшення максимального розміру банера */
-            }
-            .video-container {
-                width: 95%; /* Зменшення ширини відео */
-            }
-            iframe {
-                height: 250px; /* Зменшення висоти відео для мобільних */
-            }
-        }
+/* Медіа-запит для мобільних пристроїв */
+@media (max-width: 768px) {
+    .banner-container {
+        top: 10px; /* Зменшення відстані для мобільних */
+    }
+    .banner img {
+        width: auto !important; /* Автоматична ширина */
+        max-width: 100% !important; /* Дозволяє займати всю ширину контейнера */
+        height: auto !important; /* Автоматичне співвідношення сторін */
+        display: block;
+    }
+    .video-container {
+        width: 100%; /* Використовує всю ширину екрану */
+        max-width: 700px; /* Обмеження максимальної ширини */
+    }
+    iframe {
+        height: 300px; /* Збільшена висота відео для кращого перегляду */
+    }
+}
     </style>
 </head>
 <body>
