Оновлення стилів для адаптивного дизайну

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     .banner-container {
         top: 10px; /* Зменшення відстані для мобільних */
     }
-    .banner img {
+    .banner-container img {
         width: auto !important; /* Автоматична ширина */
         max-width: 100% !important; /* Дозволяє займати всю ширину контейнера */
         height: auto !important; /* Автоматичне співвідношення сторін */
