--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             background-color: #000;
             position: relative;
         }
+
         .banner-container {
             position: absolute;
             top: 20px;
@@ -22,17 +23,21 @@
             transform: translateX(-50%);
             display: flex;
             align-items: center;
-            gap: 15px; /* Відстань між елементами */
+            gap: 15px;
         }
+
         .banner img {
-    width: auto; /* Автоматична ширина */
-    max-width: 600px; /* Збільшена максимальна ширина */
-    height: auto;
-    cursor: pointer;
-}
+            width: 80%;
+            max-width: 300px;
+            height: auto;
+            cursor: pointer;
+            transition: all 0.3s ease-in-out;
+        }
+
         .emoji {
             font-size: 50px;
         }
+
         .video-container {
             position: relative;
             width: 80%;
@@ -40,34 +45,36 @@
             background: #111;
             padding: 10px;
             border-radius: 10px;
+            margin-top: 60px; /* Відсуваємо відео вниз */
         }
+
         iframe {
             width: 100%;
-            height: 450px; /* Розмір відео */
+            height: 450px;
             border: none;
         }
 
-/* Медіа-запит для мобільних пристроїв */
-/* Медіа-запит для мобільних пристроїв */
-@media (max-width: 768px) {
-    .banner-container {
-        top: 5px;
-        flex-direction: column;
-    }
-    .banner img {
-        width: 90vw !important; /* 90% ширини екрана */
-        max-width: 600px !important; /* Збільшений максимальний розмір */
-        height: auto !important; /* Автоматичне збереження пропорцій */
-        display: block;
-    }
-    .video-container {
-        width: 100%; /* Використовує всю ширину екрану */
-        max-width: 700px; /* Обмеження максимальної ширини */
-    }
-    iframe {
-        height: 300px; /* Збільшена висота відео для кращого перегляду */
-    }
-}
+        /* Медіа-запит для мобільних пристроїв */
+        @media (max-width: 768px) {
+            .banner-container {
+                top: 5px; /* Трохи піднімаємо банер */
+                flex-direction: column; /* Вирівнюємо елементи вертикально */
+            }
+
+            .banner img {
+                width: 100%; /* Банер буде більш адаптивним */
+                max-width: 400px; /* Збільшуємо максимальний розмір */
+            }
+
+            .video-container {
+                width: 95%;
+                margin-top: 80px; /* Ще більше відсуваємо відео вниз */
+            }
+
+            iframe {
+                height: 250px; /* Зменшуємо відео на мобільних */
+            }
+        }
     </style>
 </head>
 <body>
@@ -79,7 +86,7 @@
         <div class="emoji">👈</div>
     </div>
     <div class="video-container">
-        <!-- Вставка відео через Google Drive iframe -->
+        <!-- Вставка відео через Google Drive -->
         <iframe src="https://drive.google.com/file/d/1Qtdn_TFyQn65BRAXmPKA0wm4BG2O0kO2/preview" allow="autoplay"></iframe>
     </div>
 </body>
