Оновлення стилів для адаптивного дизайну

--- a/index.html
+++ b/index.html
@@ -33,11 +33,6 @@
             cursor: pointer;
             transition: all 0.3s ease-in-out;
         }
-
-        .emoji {
-            font-size: 50px;
-        }
-
         .video-container {
             position: relative;
             width: 80%;
@@ -79,11 +74,9 @@
 </head>
 <body>
     <div class="banner-container">
-        <div class="emoji">👉</div>
         <a href="https://1wzyuh.com/casino/list/4?p=a7w0" class="banner">
-            <img src="images/banner2.png.png" alt="Банер">
+            <img src="images/banner.png" alt="Банер">
         </a>
-        <div class="emoji">👈</div>
     </div>
     <div class="video-container">
         <!-- Вставка відео через Google Drive -->
