Оновлення стилів для адаптивного дизайну

--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
     </div>
     <div class="video-container">
         <!-- Вставка відео через Google Drive -->
-        <iframe src="https://drive.google.com/file/d/1HIN1HS9MZqQHXBOmYWkmu9bRQSXtQK4Z/preview" allow="autoplay"></iframe>
+        <iframe src="https://drive.google.com/file/d/1HIN1HS9MZqQHXBOmYWkmu9bRQSXtQK4Z/preview"  allow="autoplay; fullscreen"
+        allowfullscreen></iframe>
     </div>
 </body>
 </html>
