Оновлення стилів для адаптивного дизайну

--- a/index.html
+++ b/index.html
@@ -80,8 +80,12 @@
     </div>
     <div class="video-container">
         <!-- Вставка відео через Google Drive -->
-        <iframe src="https://drive.google.com/file/d/1HIN1HS9MZqQHXBOmYWkmu9bRQSXtQK4Z/preview"  allow="autoplay; fullscreen"
-        allowfullscreen></iframe>
+        <iframe 
+        src="https://drive.google.com/file/d/1HIN1HS9MZqQHXBOmYWkmu9bRQSXtQK4Z/preview" 
+        allow="autoplay; fullscreen"
+        allowfullscreen
+        playsinline>
+    </iframe>    
     </div>
 </body>
 </html>
