Оновлення стилів для адаптивного дизайну

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <!-- Вставка відео через Google Drive -->
         <iframe 
         src="https://drive.google.com/file/d/1HIN1HS9MZqQHXBOmYWkmu9bRQSXtQK4Z/preview" 
-        allow="autoplay; fullscreen"
+        allow="autoplay; fullscreen; encrypted-media"
         allowfullscreen
         playsinline>
     </iframe>    
