--- a/index.html
+++ b/index.html
@@ -62,13 +62,16 @@
             }
 
             .video-container {
-                width: 95%;
-                margin-top: 80px; /* Ще більше відсуваємо відео вниз */
-            }
+    position: relative;
+    width: 100%;
+    max-width: 800px;
+    aspect-ratio: 16 / 9;
+}
 
-            iframe {
-                height: 250px; /* Зменшуємо відео на мобільних */
-            }
+.video-container iframe {
+    width: 100%;
+    height: 100%;
+}
         }
     </style>
 </head>
@@ -81,11 +84,13 @@
     <div class="video-container">
         <!-- Вставка відео через Google Drive -->
         <iframe 
-        src="https://drive.google.com/file/d/1HIN1HS9MZqQHXBOmYWkmu9bRQSXtQK4Z/preview" 
-        allow="autoplay; fullscreen; encrypted-media"
-        allowfullscreen
-        playsinline>
-    </iframe>    
+        frameborder="0" 
+        width="100%" 
+        height="450" 
+        src="https://www.dailymotion.com/embed/video/k5NnQLKuWFkYp9CH10o" 
+        allowfullscreen 
+        allow="autoplay; fullscreen">
+    </iframe>     
     </div>
 </body>
 </html>
