--- a/index.html
+++ b/index.html
@@ -34,21 +34,16 @@
             transition: all 0.3s ease-in-out;
         }
         .video-container {
-            position: relative;
-            width: 80%;
-            max-width: 800px;
-            background: #111;
-            padding: 10px;
-            border-radius: 10px;
-            margin-top: 60px; /* Відсуваємо відео вниз */
-        }
+    position: relative;
+    width: 100%;
+    max-width: 800px;
+    aspect-ratio: 16 / 9;
+}
 
-        iframe {
-            width: 100%;
-            height: 450px;
-            border: none;
-        }
-
+.video-container iframe {
+    width: 100%;
+    height: 100%;
+}
         /* Медіа-запит для мобільних пристроїв */
         @media (max-width: 768px) {
             .banner-container {
@@ -60,7 +55,6 @@
                 width: 100%; /* Банер буде більш адаптивним */
                 max-width: 400px; /* Збільшуємо максимальний розмір */
             }
-
             .video-container {
     position: relative;
     width: 100%;
@@ -82,15 +76,12 @@
         </a>
     </div>
     <div class="video-container">
-        <!-- Вставка відео через Google Drive -->
         <iframe 
-        frameborder="0" 
-        width="100%" 
-        height="450" 
-        src="https://www.dailymotion.com/embed/video/k5NnQLKuWFkYp9CH10o" 
-        allowfullscreen 
-        allow="autoplay; fullscreen">
-    </iframe>     
-    </div>
+            src="https://www.dailymotion.com/embed/video/k795Bdjj7ImUkOCH71e" 
+            frameborder="0" 
+            allowfullscreen 
+            allow="autoplay; fullscreen">
+        </iframe>
+    </div>    
 </body>
 </html>
