Оновлення стилів для адаптивного дизайну

--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
         </a>
     </div>
     <div class="video-container">
-        <iframe 
-            src="https://www.dailymotion.com/embed/video/k795Bdjj7ImUkOCH71e" 
-            frameborder="0" 
-            allowfullscreen 
-            allow="autoplay; fullscreen">
-        </iframe>
+        <iframe src="https://www.pornhub.com/embed/ph63cc2ac58edf8" 
+        width="560" 
+        height="315" 
+        frameborder="0" 
+        allowfullscreen>
+</iframe>
     </div>    
 </body>
 </html>
